--- a/onev/.classpath
+++ b/onev/.classpath
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_51">
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/ecj-4.4.2.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat7-websocket.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="D:/apache-tomcat-7.0.64-windows-x64/apache-tomcat-7.0.64/lib/websocket-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/selenium-server-standalone-2.46.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/selenium-java-2.46.0/selenium-2.46.0/selenium-java-2.46.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
